[gd_scene load_steps=6 format=3 uid="uid://bvdrpjow6u88l"]

[ext_resource type="Script" path="res://src/day_17/day_17_visualizer.gd" id="1_u3yah"]
[ext_resource type="Texture2D" uid="uid://cu4vib70vacql" path="res://src/day_17/heat.png" id="2_doifs"]
[ext_resource type="PackedScene" uid="uid://ij80ps8ylook" path="res://src/mouse_camera.tscn" id="2_yn8ye"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jcecx"]
texture = ExtResource("2_doifs")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0

[sub_resource type="TileSet" id="TileSet_owax1"]
sources/0 = SubResource("TileSetAtlasSource_jcecx")

[node name="Day17Visualizer" type="Node2D"]
script = ExtResource("1_u3yah")

[node name="MouseCamera" parent="." instance=ExtResource("2_yn8ye")]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_owax1")
format = 2
layer_1/tile_data = PackedInt32Array()

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load:"

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "test_input.txt"

[node name="Button2" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "input.txt"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="FindBestPathPart1Button" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Find Best Path Part 1"

[node name="FindBestPathPart2Button" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Find Best Path Part 2"

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Heat Loss:"

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label3" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "open_set size:"

[node name="Label4" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/Button" to="." method="load_and_repopulate" binds= ["res://src/day_17/test_input.txt"]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/Button2" to="." method="load_and_repopulate" binds= ["res://src/day_17/input.txt"]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer2/FindBestPathPart1Button" to="." method="_on_find_best_path_part_1_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer2/FindBestPathPart2Button" to="." method="_on_find_best_path_part_2_button_pressed"]
